--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
   ],
   "scripts": {
     "prebuild": "rimraf build admin/build",
-    "build": "build-adapter all",
-    "watch": "build-adapter all --watch",
+    "build": "build-adapter ts",
+    "watch": "build-adapter ts --watch",
     "prebuild:ts": "rimraf build",
     "build:ts": "build-adapter ts",
     "watch:ts": "build-adapter ts --watch",
