--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": ">= 20"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.3.2"
+    "@iobroker/adapter-core": "^3.3.2",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
@@ -42,6 +43,8 @@
     "@types/node": "^20.19.25",
     "@types/react": "^17.0.90",
     "@types/react-dom": "^17.0.26",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^6.1.2",
