add scene management view

--- a/admin/jsonConfig.json
+++ b/admin/jsonConfig.json
@@ -24,16 +24,13 @@
                     "lg": 4,
                     "help": "Port for WebSocket API (default: 8082)"
                 },
-                "roomMetricsBatchIntervalSec": {
-                    "type": "number",
-                    "label": "Room metrics batch interval (sec)",
-                    "default": 60,
-                    "min": 5,
-                    "max": 3600,
+                "scenesPath": {
+                    "type": "text",
+                    "label": "Path to scenes objects",
                     "sm": 12,
                     "md": 6,
                     "lg": 4,
-                    "help": "Sendeintervall für roomMetricsUpdateBatch (Sekunden)"
+                    "help": "Path to cron_scenes jobs folder (default: cron_scenes.0.jobs)"
                 }
             }
         }
