--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.home_controller_backend",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "home_controller_backend",
   "author": {
     "name": "prof",
