--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.3.2",
-    "ws": "^8.18.3",
     "ajv": "^8.17.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
@@ -34,10 +34,10 @@
     "@alcalzone/release-script-plugin-license": "^4.0.0",
     "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
     "@iobroker/adapter-dev": "^1.5.0",
-    "@iobroker/adapter-react": "2.0.22",
+    "@iobroker/adapter-react": "^2.2.4",
     "@iobroker/dev-server": "^0.8.0",
     "@iobroker/eslint-config": "^2.2.0",
-    "@iobroker/testing": "^5.2.2",
+    "@iobroker/testing": "^5.1.1",
     "@material-ui/core": "^4.12.4",
     "@tsconfig/node20": "^20.1.8",
     "@types/express": "^5.0.6",
