remove unused react

--- a/package.json
+++ b/package.json
@@ -34,25 +34,19 @@
     "@alcalzone/release-script-plugin-license": "^4.0.0",
     "@alcalzone/release-script-plugin-manual-review": "^4.0.0",
     "@iobroker/adapter-dev": "^1.5.0",
-    "@iobroker/adapter-react": "^2.2.4",
     "@iobroker/dev-server": "^0.8.0",
     "@iobroker/eslint-config": "^2.2.0",
     "@iobroker/testing": "^5.1.1",
-    "@material-ui/core": "^4.12.4",
     "@tsconfig/node20": "^20.1.8",
     "@types/express": "^5.0.6",
     "@types/iobroker": "npm:@iobroker/types@^7.0.7",
-    "@types/node": "^20.19.25",
-    "@types/react": "^17.0.90",
-    "@types/react-dom": "^17.0.26",
+    "@types/node": "^20.19.26",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "rimraf": "^6.1.2",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.2"
   },
   "main": "build/main.js",
   "files": [
@@ -65,15 +59,12 @@
     "LICENSE"
   ],
   "scripts": {
-    "prebuild": "rimraf build admin/build",
+    "prebuild": "rimraf build",
     "build": "build-adapter ts",
     "watch": "build-adapter ts --watch",
     "prebuild:ts": "rimraf build",
     "build:ts": "build-adapter ts",
     "watch:ts": "build-adapter ts --watch",
-    "prebuild:react": "rimraf admin/build",
-    "build:react": "build-adapter react",
-    "watch:react": "build-adapter react --watch",
     "test:ts": "mocha --config test/mocharc.custom.json src/**/*.test.ts",
     "test:package": "mocha test/package --exit",
     "test:integration": "mocha test/integration --exit",
