--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "lint": "eslint -c eslint.config.mjs .",
     "translate": "translate-adapter",
     "release": "release-script",
-    "dev-server": "dev-server"
+    "dev-server": "dev-server",
+    "prepublishOnly": "npm run build",
+    "prepack": "npm run build"
   },
   "bugs": {
     "url": "https://github.com/jkuenemund/ioBroker.home_controller_backend/issues"
